[package]
    name    = "wasi-experimental-http-wasmtime-sample"
    version = "0.9.0"
    authors = [ "Radu Matei <radu.matei@microsoft.com>" ]
    edition = "2021"

[dependencies]
    anyhow = "1.0"
    futures = "0.3"
    http = "0.2"
    reqwest = { default-features = true, features = [
        "json",
        "blocking",
    ], git = "https://github.com/panekj/reqwest.git", rev = "738bdc07464186c930252f5220af8e95c16b22ff" }
    structopt = "0.3"
    tokio = { version = "1.4", features = [ "full" ] }
    wasmtime = "1.0.0"
    wasmtime-wasi = "1.0.0"
    wasi-common = "1.0.0"
    wasi-cap-std-sync = "1.0.0"
    wasi-experimental-http = { path = "crates/wasi-experimental-http" }
    wasi-experimental-http-wasmtime = { path = "crates/wasi-experimental-http-wasmtime" }

[workspace]
    members = [
        "crates/wasi-experimental-http",
        "crates/wasi-experimental-http-wasmtime",
        "tests/rust",
    ]

[[bin]]
    name = "wasmtime-http"
    path = "bin/wasmtime-http.rs"
