[package]
    name        = "wasi-experimental-http-wasmtime"
    version     = "0.10.0"
    authors     = [ "Radu Matei <radu.matei@microsoft.com>" ]
    edition     = "2021"
    repository  = "https://github.com/deislabs/wasi-experimental-http"
    license     = "MIT"
    description = "Experimental HTTP library for WebAssembly in Wasmtime"
    readme      = "readme.md"

[dependencies]
    anyhow = "1.0"
    bytes = "1"
    futures = "0.3"
    http = "0.2"
    reqwest = { default-features = true, features = [
        "json",
        "blocking",
    ], git = "https://github.com/panekj/reqwest.git", rev = "738bdc07464186c930252f5220af8e95c16b22ff" }
    thiserror = "1.0"
    tokio = { version = "1.4.0", features = [ "full" ] }
    tracing = { version = "0.1", features = [ "log" ] }
    url = "2.2.1"
    wasmtime = "1.0.0"
    wasmtime-wasi = "1.0.0"
    wasi-common = "1.0.0"
